clusters/production/external-servers/portainer/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: portainer
          port: 9443
          scheme: https
          serversTransport: portainer-insecure-transport
